[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/scenes/Hipodromo.gd" type="Script" id=1]
[ext_resource path="res://Objetos/CaballoCafe.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objetos/CartaAceleracion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objetos/CaballoBlanco.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objetos/CartaEnergia+.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objetos/CartaEnergia-.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objetos/CartaDesaceleracion.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objetos/BarraEstamina.tscn" type="PackedScene" id=8]
[ext_resource path="res://Recursos/recursos/Fondo/START FONDO.png" type="Texture" id=9]
[ext_resource path="res://Recursos/recursos/Fondo/Fondo.png" type="Texture" id=10]
[ext_resource path="res://Recursos/recursos/Fondo/START frente.png" type="Texture" id=11]
[ext_resource path="res://Recursos/recursos/Fondo/fondo finish.png" type="Texture" id=12]
[ext_resource path="res://Recursos/recursos/Fondo/fondo1.png" type="Texture" id=13]
[ext_resource path="res://Recursos/recursos/Sonidos/Fondo.wav" type="AudioStream" id=14]
[ext_resource path="res://Scripts/scenes/ZonaGameOver.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54, 160.5 )

[node name="Hipodromo" type="Node2D"]
position = Vector2( 0, 50 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 1200, 122 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Fondo2" type="Sprite" parent="."]
position = Vector2( 3600, 122 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Fondo3" type="Sprite" parent="."]
position = Vector2( 6000, 122 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Fondo-Base" type="Sprite" parent="."]
position = Vector2( 8098, 122 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="FondoFinish" type="Sprite" parent="."]
position = Vector2( 7500, 122 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="StartFondo" type="Sprite" parent="."]
position = Vector2( 56, 119 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="CaballoCafe" parent="." instance=ExtResource( 2 )]
position = Vector2( 250, 150 )
scale = Vector2( 3, 3 )

[node name="StartFrente" type="Sprite" parent="."]
position = Vector2( 60, 115 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="CaballoBlanco" parent="." instance=ExtResource( 4 )]
position = Vector2( 300, 190 )
scale = Vector2( 3, 3 )

[node name="Camera2D" type="Camera2D" parent="CaballoBlanco"]
current = true
limit_left = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_top = 294.0
margin_right = 600.0
margin_bottom = 481.0
mouse_filter = 2
color = Color( 0.411765, 0.415686, 0.415686, 1 )

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 314.0
margin_right = 550.0
margin_bottom = 464.0
mouse_filter = 2
color = Color( 0.286275, 0.286275, 0.286275, 1 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
margin_top = 4.0
margin_right = 600.0
margin_bottom = 50.0
mouse_filter = 2
color = Color( 0.333333, 0.337255, 0.337255, 1 )

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer"]
margin_right = 600.0
margin_bottom = 20.0
mouse_filter = 2
color = Color( 0.270588, 0.282353, 0.282353, 1 )

[node name="CartaAceleracion" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 150, 363 )
scale = Vector2( 2.5, 2.5 )

[node name="CartaDesaceleracion" parent="CanvasLayer" instance=ExtResource( 7 )]
position = Vector2( 250, 363 )
scale = Vector2( 2.5, 2.5 )

[node name="CartaEnergia+" parent="CanvasLayer" instance=ExtResource( 5 )]
position = Vector2( 350, 363 )
scale = Vector2( 2.5, 2.5 )

[node name="CartaEnergia-" parent="CanvasLayer" instance=ExtResource( 6 )]
position = Vector2( 450, 363 )
scale = Vector2( 2.5, 2.5 )

[node name="BarraEstamina" parent="CanvasLayer" instance=ExtResource( 8 )]
position = Vector2( 410, 420 )
scale = Vector2( 3, 3 )

[node name="ZonaGameOver" type="Area2D" parent="."]
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZonaGameOver"]
position = Vector2( 7800, 127 )
shape = SubResource( 1 )

[node name="SonidoFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[connection signal="body_entered" from="ZonaGameOver" to="ZonaGameOver" method="_on_ZonaGameOver_body_entered"]
